# algebraEnforcer

./: .gitignore  Dockerfile  README.md  algebra.py  algebra.yaml  algebraui.py  checkDone.py  checkdone.py  model.py  pyproject.toml  requirements.txt  schema.sql
src/algebraenforcer/: algebra.py  algebra.yaml
src/algebraenforcer/static/: bootstrap.css  style.css
src/algebraenforcer/templates/: ._show_answer.html  algebra_done.html  algebra_not_done.html  layout.html  show_heron.html  show_question.html  start_up.html
static/: bootstrap.css
templates/: layout.html  show_expand.html  show_heron.html  show_question.html  well_done.html
